# pythonsay

./: README.md  pyproject.toml  setup.py
scr/: draws.py  pythonsay.py
