[project]
name = "pythonsay_Cafalchio"
version = "0.0.1"
authors = [
  { name="Matheus Cafalchio", email="mcafalchio@gmail.com" },
]
description = "A small example package for the pythonsay project. The main purpose is to show how to create a package with automated tests."
readme = "README.md"
license = { file="LICENSE" }

requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/cafalchio/pythonsay"
"Bug Tracker" = "https://github.com/cafalchio/pythonsay/issues"